--- a/Verifone/Verifone.csproj
+++ b/Verifone/Verifone.csproj
@@ -48,7 +48,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Verifone.Program</StartupObject>
+    <StartupObject>
+    </StartupObject>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>ED53EA35C88C8FA5FB87D39B283563FC58E01BBC</ManifestCertificateThumbprint>
@@ -62,17 +63,23 @@
   <PropertyGroup>
     <SignManifests>true</SignManifests>
   </PropertyGroup>
+  <PropertyGroup>
+    <NoWin32Manifest>true</NoWin32Manifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Coneccion.cs" />
+    <Compile Include="ConectionVidaNet.cs" />
+    <Compile Include="ConectionCardNet.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Properties\App.config" />
     <None Include="Verifone_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
